crates/dashboard/tests/snapshots/sql_snapshots__irate_by_id_source_aware_variant.snap
---
source: crates/dashboard/tests/sql_snapshots.rs
expression: "sql::irate_by_id(\"^cpu_usage/[a-z]+/[0-9]+$\", \"/([0-9]+)$\",)"
---
WITH unp AS (
              UNPIVOT (SELECT timestamp, COLUMNS('^cpu_usage/[a-z]+/[0-9]+$') FROM _src)
                  ON COLUMNS('^cpu_usage/[a-z]+/[0-9]+$')
                  INTO NAME col VALUE v
           )
           SELECT timestamp::DOUBLE/1e9 AS t,
                  regexp_extract(col, '/([0-9]+)$', 1) AS id,
                  irate_lag(
                      v,
                      LAG(v) OVER (PARTITION BY col ORDER BY timestamp),
                      timestamp - LAG(timestamp) OVER (PARTITION BY col ORDER BY timestamp)
                  ) AS v
           FROM unp
